Add tilemap editor details to manual

--- a/manual/index.html
+++ b/manual/index.html
@@ -534,8 +534,10 @@
             <li><img src="images/detailsicon.png"></img> <b>Details editor: </b>allows details of each tile to be changed.
               <ul>
                 <li><b>Left-clicking on the tilemap preview</b> selects the clicked tile as the active tile.</li>
-                <li><b>Left-clicking on the tile selector</b> changes the pattern associated with the active tile.</li>
                 <li><b>Interacting with the detailed tile editor</b> below the toolbar changes the properties of the active tile. Note that all functions of this editor exception the Tile box are disabled for 1bpt tilemaps.</li>
+                <li><b>Left-clicking on the tile selector</b> changes the pattern associated with the active tile.</li>
+                <li><b>Right-clicking on the tilemap preview</b> flips the clicked tile horizontally.</li>
+                <li><b>Middle-clicking on the tilemap preview</b> flips the clicked tile vertically.</li>
               </ul>
             </li>
             <li><b>Grid check box: </b>enables and disables the tilemap grid overlay.</li>
