List tilemap editor shortcuts in manual

--- a/manual/index.html
+++ b/manual/index.html
@@ -512,7 +512,7 @@
         <li><b>Tile selector: </b>an interactive display showing the tiles in the graphic associated with the tilemap. Generally, this indicates the "active" metatile for each tool, and allows different ones to be selected as "active".</li>
         <li><b>Editing tools: </b>allows different tools to be selected for editing the tilemap.
           <ul>
-            <li><img src="images/pencilicon.png"></img> <b>Pencil: </b>"draws" on top of the tilemap.
+            <li><img src="images/pencilicon.png"></img> <b>Pencil</b> (shortcut: <b>P</b>): "draws" on top of the tilemap.
               <ul>
                 <li><b>Left-clicking on the tilemap preview</b> overwrites the clicked tile with the active tile.</li>
                 <li><b>Left-clicking on the tile selector</b> selects the clicked tile as the active tile.</li>
@@ -522,7 +522,7 @@
                 <li><b>Holding Control and clicking on the tilemap preview</b> switches to the Area Clone tool.</li>
               </ul>
             </li>
-            <li><img src="images/selecticon.png"></img> <b>Area clone: </b>allows a rectangular portion of the tilemap to be coped to another area.
+            <li><img src="images/selecticon.png"></img> <b>Area clone</b> (shortcut: <b>L</b>): allows a rectangular portion of the tilemap to be coped to another area.
               <ul>
                 <li><b>Left-clicking and dragging on the tilemap preview with nothing selected</b> selects an area for copying.</li>
                 <li><b>Left-clicking after selecting something</b> copies the selected area to the clicked area.</li>
@@ -531,7 +531,7 @@
                 <li><b>Left-clicking on the tile selector</b> switches to the Pencil tool and selects the clicked tile as the active tile.</li>
               </ul>
             </li>
-            <li><img src="images/detailsicon.png"></img> <b>Details editor: </b>allows details of each tile to be changed.
+            <li><img src="images/detailsicon.png"></img> <b>Details editor</b> (shortcut: <b>K</b>): allows details of each tile to be changed.
               <ul>
                 <li><b>Left-clicking on the tilemap preview</b> selects the clicked tile as the active tile.</li>
                 <li><b>Interacting with the detailed tile editor</b> below the toolbar changes the properties of the active tile. Note that all functions of this editor exception the Tile box are disabled for 1bpt tilemaps.</li>
