Add Object 69 section to manual, and reduce font size of table of contents

--- a/manual/index.html
+++ b/manual/index.html
@@ -11,7 +11,7 @@
       by Supper (suppertails66@gmail.com)
     </div>
     <h2>Table of Contents</h2>
-    <div class="tableofcontents">
+    <div class="tableofcontents" style="font-size: 14;">
       <ol>
         <li><a href="#overview">Overview</a></li>
         <li><a href="#gettingstarted">Getting Started</a></li>
@@ -126,6 +126,7 @@
             <ol>
               <li><a href="#tipsoneway">One-Way Levels</a></li>
               <li><a href="#tipsteleport">Teleporters</a></li>
+              <li><a href="#tipsobj69">Object 69</a></li>
             </ol>
           </li>
       </ol>
@@ -969,6 +970,10 @@
     <h3 id="tipsteleport">Teleporters</h3>
     <p>
       By using the <a href="#lengthmapeditdialog">Width/Height Map Edit Dialog</a>, you can set the magnitudes for a width or height map to values larger than the metatile itself. The net effect of this is that if, for example, you set all the magnitudes on a height map to 63, then stepping on a metatile with that height map will cause Tails to "teleport" up by approximately three metatiles&mdash;enough to push him through a low ceiling or other obstacle. Similar effects can be realized in other directions.
+    </p>
+    <h3 id="tipsobj69">Object 69</h3>
+    <p>
+      Object 69, the "bird launcher" normally used to block the exit to Coco Island in area 6-5, is special. In its idle state, it is invisible and fires missiles at Tails when he is to the left of it. After being hit six times, it is destroyed, converting a <b>5x2 area of tiles to the right of it to metatile type 172</b>. Metatile 172 is ordinarily a regular "passable" tile, so this can be used to open up a passageway. Metatile 172 can also be assigned a different effect in the <a href="#behavioreditor">metatile behavior editor</a> to achieve different ends.
     </p>
   </body>
 </html>
