Document resource exporter progress bar

--- a/manual/index.html
+++ b/manual/index.html
@@ -818,6 +818,7 @@
         <li><b>Metatile exporter: </b>exports metatile sets. <b>Aggregate</b> outputs sets as a single image like the metatile displays used in the program, while <b>Individual</b> outputs each metatile as a separate image. <b>The preview graphic and palette from the <a href="#structureeditor">metatile structure editor</a> are used to export the graphics.</b></li>
         <li><b>Graphic exporter: </b>exports graphics. <b>Raw graphics</b> exports the raw tiles that compose each graphic, and will render color 0 as transparent if the <b>Transparency</b> box is checked. <b>Sprite mappings</b> exports all the sprite mappings associated with each graphic. <b>Aligned sprite mappings</b> is the same as "Sprite mappings" except that each sprite mapping is centered on a 256x256 pixel transparent background according to its x-offset and y-offset parameter, as explained under <a href="#graphicseditor">Graphics Editor</a>, allowing sprites to more easily be combined into animations. <b>The preview palette from the graphics editor is used to export the graphics.</b></li>
         <li><b>Tilemap exporter: </b>exports tilemaps.</b></li>
+        <li><b>Progress bar: </b>indicates progress through the current export. (Maps can take a while!)</b></li>
       </ol>
     </p>
     
