Add no game over hack info to manual

--- a/manual/index.html
+++ b/manual/index.html
@@ -797,6 +797,12 @@
             <li><b>Flight disabled: </b>prevents Tails from flying. This is a cleaner solution than setting flight time to zero in the power-up editor.</li>
           </ul>
         </li>
+        <li><b>Game over: </b>change what happens when Tails dies.
+          <ul>
+            <li><b>Standard: </b>the standard game over system. When Tails dies, the Game Over screen displays and the game restarts, effectively kicking the player back to the world map.</li>
+            <li><b>No game over: </b>When Tails dies, he restarts the current map at the spawn point where he began it with max health.</li>
+          </ul>
+        </li>
         <li><b>Bug fixes: </b>toggle fixes for various game bugs, mostly minor ones.
           <ul>
             <li><b>Jump height when Button 1 held: </b>fixes an issue where the game erroneously checks to see if either Button 1 (use item) or Button 2 (jump) is pressed when deciding how long the player has held down the jump button. This causes Tails to incorrectly always jump to the maximum possible height when the item button is held down and the jump button is tapped.</li>
