--- a/manual/index.html
+++ b/manual/index.html
@@ -405,6 +405,11 @@
         <li><b>Metatile structure set</b>: Changes the level's metatile structure set, and thus the appearance of its metatiles.</li>
         <li><b>Palette 1 and 2</b>: Changes the level's tile palette (palette 1) and object palette (palette 2).</li>
       </ul>
+	  There are also a few options for performing semi-common modifications to levels:
+	  <ul>
+		<li><b>Remove all objects</b>: clears all objects from the level (requires confirmation).</li>
+		<li><b>Import layout...</b>: opens the Import Layout dialog, which allows the layout of the current level to be replaced with that of another. This overwrites the level layout, object layout, level dimensions, camera boundaries, and metatile structure ID, but does <b>not</b> change the level's map graphic (set in the VRAM editor), palettes, or spawn positions.</li>
+	  </ul>
     </p>
     <h3 id="vrameditor">VRAM Editor</h3>
     <p>
