Add some warnings to manual

--- a/manual/index.html
+++ b/manual/index.html
@@ -892,6 +892,7 @@
       <ul>
         <li>The game expects certain graphics to appear in the same place in VRAM whenever they are needed.
           <ul>
+            <li><b>All graphics must be placed at an even index.</b></li>
             <li>The <b>HUD graphic</b> must always appear at <b>index 18</b>.</li>
             <li>The <b>dead duck graphic</b> must always appear at <b>index 110</b>. This is used for the "dead duck" object that appears when a duck-like enemy is killed. If a level doesn't contain any of those enemies, it's okay to use that space for other graphics.</li>
           </ul>
