--- a/manual/index.html
+++ b/manual/index.html
@@ -895,6 +895,7 @@
             <li><b>All graphics must be placed at an even index.</b></li>
             <li>The <b>HUD graphic</b> must always appear at <b>index 18</b>.</li>
             <li>The <b>dead duck graphic</b> must always appear at <b>index 110</b>. This is used for the "dead duck" object that appears when a duck-like enemy is killed. If a level doesn't contain any of those enemies, it's okay to use that space for other graphics.</li>
+            <li>The <b>beehive graphic</b> must always appear at <b>index 162</b> (unflipped), followed by the flipped version of the graphic at <b>index 174</b>.</li>
           </ul>
         </li>
         <li>If an object graphic overflows into the map graphic (index 256 or above), <em>the object graphic will overwrite the map graphic</em>, which is probably not what you want.</li>
