Fix spawn camera box boundaries (same issue as level bounds -- should use common constants)

--- a/manual/index.html
+++ b/manual/index.html
@@ -375,7 +375,7 @@
             </li>
             <li><b>Electric barriers</b> (object type 75) and <b>electric barrier switches</b> (object type 76):
               <ul>
-                <li><b>Identifier</b>: When an electric barrier siwtch is pressed, it attempts to deactivate the electric barrier whose identifier matches its own. Thus, this value is used to pair switches and barriers together.</li>
+                <li><b>Identifier</b>: When an electric barrier siwtch is pressed, it attempts to deactivate the electric barrier whose identifier matches its own. Thus, this value is used to pair switches and barriers together. Note that <b>this value should range from 0 to 7</b> (hence, no more than eight switches to a level).</li>
               </ul>
             </li>
           </ul>
